# jaet-base

./: .gitignore  .gitmodules  ENVIRONMENT  Makefile  Makefile.am  configure  configure.ac  xpt.mk
autom4te.cache/: output.0  output.1  traces.0  traces.1
base/: Makefile  application.ini
base/chrome/: chrome.manifest
base/chrome/content/: actions.js  jaet.xul
base/chrome/locale/en_US/: jaet.dtd
base/defaults/preferences/: jaet.js
src/: Makefile.am  Makefile.in  srcstamp
src/components/: Makefile.am  Makefile.in
src/extensions/: Makefile.in
src/program/: Makefile.am  Makefile.in
